grpc_server/testIngress/server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: grpc-server
  name: grpc-server
spec:
  replicas: 3
  selector:
    matchLabels:
      app: grpc-server
  template:
    metadata:
      labels:
        app: grpc-server
    spec:
      containers:
      - image: grpc.server
        imagePullPolicy: Never
        name: grpc-server
        ports:
        - containerPort: 9002
