grpc_server/testIngress/headless-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: grpc-server
  name: headless-service
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 9002
  selector:
    app: grpc-server
  type: ClusterIP
  clusterIP: None
